--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--Use InputList to show Items on top of the App Screen: Items are numbered according to their index in the array-->
 <resources>
     <array name="InputList">
         <item>का</item>
